--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
             <p v-if="items.length === 0">Nice job! you've bought all your items.</p>
         </div>
         <script src="https://unpkg.com/vue"></script>
+        <script type="module">
+            // Import the functions you need from the SDKs you need
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
+            import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+            // TODO: Add SDKs for Firebase products that you want to use
+            // https://firebase.google.com/docs/web/setup#available-libraries
+          
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            const firebaseConfig = {
+              apiKey: "AIzaSyAcQyad2eoS2Zup8M3cjjugjdno1lbPFn8",
+              authDomain: "shopping-list-data-84343.firebaseapp.com",
+              databaseURL: "https://shopping-list-data-84343-default-rtdb.firebaseio.com",
+              projectId: "shopping-list-data-84343",
+              storageBucket: "shopping-list-data-84343.appspot.com",
+              messagingSenderId: "491220169075",
+              appId: "1:491220169075:web:28a791da2575af5292d506",
+              measurementId: "G-Z5ZYKKY12E"
+            };
+          
+            // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+            const analytics = getAnalytics(app);
+        </script>
         <script>
             var shoppingList = new Vue({
                 el: '#shopping-list',
